<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/TabLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/Tab_inicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inicio" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/Tab_produtos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/produto" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/Tab_vendas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vendas" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/Tab_clientes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cliente" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_Pager"
        android:layout_width="411dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TabLayout">

    </androidx.viewpager2.widget.ViewPager2>


</androidx.constraintlayout.widget.ConstraintLayout>