<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_vendas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="70dp">

            <TextView
                android:id="@+id/nome_cliente_vendas"
                android:layout_width="0dp"
                android:layout_height="@dimen/tamanho_textos"
                android:layout_marginStart="10dp"
                android:gravity="center|start"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="@+id/valor_esta_pago_venda"
                tools:text="nome_cliente" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/produtos_venda"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                tools:itemCount="3"
                tools:listitem="@layout/linha_item_pedido" />

            <TextView
                android:id="@+id/data_compra_venda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="@dimen/tamanho_fonte_menor"
                app:layout_constraintStart_toEndOf="@+id/txt_data_compra_venda"
                app:layout_constraintTop_toTopOf="@+id/txt_data_compra_venda"
                tools:text="22/04/2022" />

            <View
                android:id="@+id/divider3"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="70dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/valor_esta_pago_venda"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:checked="false"
                android:clickable="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="R$: 200,00" />

            <TextView
                android:id="@+id/txt_data_compra_venda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/data_da_compra"
                android:textSize="@dimen/tamanho_fonte_menor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider3" />

            <TextView
                android:id="@+id/txt_previsao_venda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/data_prevista"
                android:textSize="@dimen/tamanho_fonte_menor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_data_compra_venda" />

            <TextView
                android:id="@+id/txt_data_pagamento_venda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/data_de_pagamento"
                android:textSize="@dimen/tamanho_fonte_menor"
                app:layout_constraintBottom_toTopOf="@+id/pago_venda"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_previsao_venda"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/data_previsao_venda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="@dimen/tamanho_fonte_menor"
                app:layout_constraintStart_toEndOf="@+id/txt_previsao_venda"
                app:layout_constraintTop_toTopOf="@+id/txt_previsao_venda"
                tools:text="05/05/2022" />

            <TextView
                android:id="@+id/data_pagamento_venda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="@dimen/tamanho_fonte_menor"
                app:layout_constraintStart_toEndOf="@+id/txt_data_pagamento_venda"
                app:layout_constraintTop_toTopOf="@+id/txt_data_pagamento_venda"
                tools:text="--/--/----" />

            <Button
                android:id="@+id/pago_venda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="5dp"
                android:text="@string/pago"
                app:layout_constraintBottom_toTopOf="@+id/produtos_venda"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/remover_venda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:text="@string/remover"
                app:layout_constraintBottom_toBottomOf="@+id/pago_venda"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/detalhes_venda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="txt_data_compra_venda,txt_previsao_venda,divider3,txt_data_pagamento_venda,data_pagamento_venda,data_previsao_venda,data_compra_venda,produtos_venda,pago_venda,remover_venda" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/tamanho_textos"
                android:layout_marginStart="10dp"
                android:gravity="center|start"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/nome_cliente_vendas"
                tools:text="ID_venda" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>